--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
+    "normalize.css": "^8.0.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0"
   }
